syntax = "proto3";
option go_package = "./router;router";

import "state.proto";
import "reaction.proto";
import "comment.proto";
import "viewer.proto";

message Message {
  oneof payload {
    State state = 1;
    Reaction reaction = 2;
    CreateComment create_comment = 3;
    Comment comment = 4;
    Viewer viewer = 5;
  }
}
